# xbmc-addon-iptvsimple

./: .gitignore  Makefile.am  README.md  autogen.sh  changelog.txt  configure.in
addons/: Makefile.am
addons/pvr.iptvsimple/: .gitignore  Makefile.am  addon.xml.in  iptv.m3u
addons/pvr.iptvsimple/resources/: settings.xml
addons/pvr.iptvsimple/resources/language/Dutch/: strings.po
addons/pvr.iptvsimple/resources/language/English/: strings.po
addons/pvr.iptvsimple/resources/language/French/: strings.po
addons/pvr.iptvsimple/resources/language/German/: strings.po
addons/pvr.iptvsimple/resources/language/Russian/: strings.po
lib/: zlib.lib
project/VS2010Express/: ConfigureAddonXML.bat  buildzip.bat  xbmc-addon-iptvsimple.sln  xbmc-addon-iptvsimple.vcxproj
project/VS2010Express/iptvsimple/: xbmc-addon-iptvsimple.vcxproj
project/VS2010Express/platform/: platform.vcxproj
project/VS2010Express/rapidxml/: rapidxml.vcxproj
project/VS2010Express/tinyxml/: tinyxml.vcxproj
src/: Makefile.am
src/iptvsimple/: Makefile.am  PVRDemoData.cpp  PVRDemoData.h  PVRIptvData.cpp  PVRIptvData.h  client.cpp  client.h
src/rapidxml/: Makefile.am
